added buttons and more pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     </head>
 
     <body>
-        <h1>Under Construction</h1>
+        <header>
+            <h1 class="header">Alex Horton</h1>
+            <a class="header-button" href="projects.html">
+                <button>Projects</button>
+            </a>
+            <a class="header-button" href="about.html">
+                <button>About Me</button>
+            </a>
+        </header>
     </body>
 </html>
