add footer and style main page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     </head>
 
     <body>
-        <header>
-            <h1 class="header">Alex Horton</h1>
-            <a class="header-button" href="projects.html">
-                <button>Projects</button>
+        <div class="header">
+            <h1 class="header-text">Alex Horton</h1>
+            <a href="projects.html">
+                <button class="header-button">Projects</button>
             </a>
-            <a class="header-button" href="about.html">
-                <button>About Me</button>
+            <a href="about.html">
+                <button class="header-button">About Me</button>
             </a>
-        </header>
+        </div>
+        <footer>Coded by Hand Using VS Code</footer>
     </body>
 </html>
