--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en-US">
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <div class="header">
             <h1 class="header-text">Alex Horton</h1>
+            <a href="index.html">
+                <button class="header-button">Home</button>
+            </a>
             <a href="projects.html">
                 <button class="header-button">Projects</button>
             </a>
