--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="en-US">
         <link rel="stylesheet" href="style.css">
+        <title>Alex Horton</title>
     </head>
 
     <body>
